# muninn-kernel-rs

./: Cargo.toml  DESIGN.md  README.md
src/: backpressure.rs  backpressure_test.rs  error.rs  frame.rs  frame_test.rs  kernel.rs  kernel_test.rs  lib.rs  pipe.rs  pipe_test.rs  router.rs  sender.rs  sender_test.rs  sigcall.rs  sigcall_test.rs  syscall.rs
tests/: hygiene.rs
