[package]
name = "muninn-kernel"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Transport-agnostic microkernel for in-memory frame routing"
license = "MIT"
readme = "README.md"
repository = "https://github.com/ianzepp/muninn-kernel-rs"
homepage = "https://github.com/ianzepp/muninn-kernel-rs"
documentation = "https://github.com/ianzepp/muninn-kernel-rs"
keywords = ["kernel", "routing", "async", "frames", "ipc"]
categories = ["asynchronous", "network-programming"]

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
collapsible_if = "allow"
collapsible_else_if = "allow"
wildcard_imports = "allow"
needless_pass_by_value = "allow"
unnecessary_map_or = "allow"
unnecessary_result_map_or_else = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
